[gd_scene load_steps=10 format=3 uid="uid://csv7dbikssj2k"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c4yc62525550" path="res://src/Player.tscn" id="2"]
[ext_resource type="Shader" path="res://assets/shader/uv_scroll.gdshader" id="2_2pdhv"]
[ext_resource type="Texture2D" uid="uid://c00ex15hxlaf3" path="res://assets/images/bg_back.png" id="2_dvhl6"]
[ext_resource type="Texture2D" uid="uid://5qrlsfujxd2s" path="res://assets/images/bg_sky.png" id="3_n2fpg"]
[ext_resource type="PackedScene" uid="uid://d1qafkk0j0lc" path="res://src/Enemy.tscn" id="4"]

[sub_resource type="ShaderMaterial" id="2"]
shader = ExtResource("2_2pdhv")
shader_parameter/scroll_speed = 0.05

[sub_resource type="ShaderMaterial" id="4"]
shader = ExtResource("2_2pdhv")
shader_parameter/scroll_speed = 0.05

[sub_resource type="Environment" id="5"]
background_mode = 4
background_canvas_max_layer = 3
glow_enabled = true
glow_intensity = 1.48
glow_strength = 0.81
glow_bloom = 0.22
glow_blend_mode = 0
glow_hdr_threshold = 0.98
glow_hdr_scale = 1.48
glow_hdr_luminance_cap = 13.97

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="BgLayer" type="CanvasLayer" parent="."]
scale = Vector2(1.28, 1.28)
transform = Transform2D(1.28, 0, 0, 1.28, 0, 0)

[node name="BgBack" type="Sprite2D" parent="BgLayer"]
texture_repeat = 2
material = SubResource("2")
texture = ExtResource("2_dvhl6")
centered = false

[node name="BgSky" type="Sprite2D" parent="BgLayer"]
texture_repeat = 2
material = SubResource("4")
texture = ExtResource("3_n2fpg")
centered = false

[node name="MainLayer" type="CanvasLayer" parent="."]

[node name="Player" parent="MainLayer" instance=ExtResource("2")]
position = Vector2(512, 512)

[node name="Enemy" parent="MainLayer" instance=ExtResource("4")]
position = Vector2(512, 128)
type = 7

[node name="ShotLayer" type="CanvasLayer" parent="."]

[node name="BulletLayer" type="CanvasLayer" parent="."]

[node name="ParticleLayer" type="CanvasLayer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("5")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(512, 300)
